feat(bot): full project registration
